--- a/roles/mysql/templates/my.cnf.j2
+++ b/roles/mysql/templates/my.cnf.j2
@@ -1,5 +1,7 @@
+#
 [client]
 user = root
+host=localhost
 port = 3306
 socket = /tmp/mysql.sock
 
@@ -17,6 +19,7 @@ user    = mysql
 # 默认就好
 #pid-file = /data/mysql/mysql.pid
 #skip-grant-tables
+sql_mode='STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION'
 open_files_limit = 65535
 back_log = 600
 max_connections = 65535
@@ -90,7 +93,8 @@ slave-skip-errors = 1032,1062,126,1114,1146,1048,1396
 
 default_storage_engine = InnoDB
 #innodb_additional_mem_pool_size = 16M
-innodb_buffer_pool_size = 512M
+#innodb_buffer_pool_size = 512M
+innodb_buffer_pool_size = 2G
 innodb_log_file_size = 128M
 innodb_lock_wait_timeout = 120
 innodb_file_per_table = 1
@@ -110,7 +114,7 @@ slow_query_log = ON
 long_query_time = 1
 
 [mysql]
-prompt="MySQL [\\d]> "
+prompt="MySQL [\d]> "
 no-auto-rehash
 
 [myisamchk]
@@ -125,3 +129,4 @@ interactive-timeout
 [mysqldump]
 quick
 max_allowed_packet = 32M
+
